--- a/src/main/resources/com/example/w22comp1011w2/create-camera-view.fxml
+++ b/src/main/resources/com/example/w22comp1011w2/create-camera-view.fxml
@@ -36,15 +36,15 @@
                   <Label text="Resolution" GridPane.rowIndex="2" />
                   <Label text="SLR" GridPane.rowIndex="3" />
                   <Label text="Price" GridPane.rowIndex="4" />
-                  <ComboBox prefWidth="150.0" promptText="Select Brand" GridPane.columnIndex="1" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <CheckBox mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <ComboBox fx:id="brandComboBox" prefWidth="150.0" promptText="Select Brand" GridPane.columnIndex="1" />
+                  <TextField fx:id="modelTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="resolutionTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <CheckBox fx:id="slrCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="priceTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                </children>
             </GridPane>
-            <Button mnemonicParsing="false" text="Submit" />
-            <Label text="Label" />
+            <Button mnemonicParsing="false" onAction="#createCamera" text="Submit" />
+            <Label fx:id="msgLabel" text="Label" />
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
